--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -31,8 +31,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with: 
           allowUpdates: true
-          name: 'Release ${{ github.ref }}'
-          tag: latest
+          tag: release
           prerelease: False
           artifacts: "/home/runner/FLINT-*.AppImage"
           token: ${{ secrets.GITHUB_TOKEN }}
