--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -19,15 +19,14 @@ jobs:
 
       - name: Clone and run the AppImage script
         run: |
-          touch /home/runner/tmp.txt
-
+          echo "Hello there!" >/home/runner/tmp.txt
 
       - name: Create release
         uses: ncipollo/release-action@v1
         with: 
           allowUpdates: true
           tag: release
-          bodyfile: body.md
+          bodyfile: .github/body.md
           prerelease: False
           artifacts: "/home/runner/tmp.txt"
           token: ${{ secrets.GITHUB_TOKEN }}
