--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -36,6 +36,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
   test:
+    needs: build
     strategy:
       matrix:
         os: [ubuntu-22.04, ubuntu-18.04, ubuntu-20.04]
