--- a/.github/workflows/test-appimage.yml
+++ b/.github/workflows/test-appimage.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Test AppImages
         run: |
           wget "https://github.com/Crystalsage/github-releases-tests/releases/download/v9.0/FLINT-${{ matrix.os }}.AppImage"
-          test -f "/home/runner/FLINT-{{ matrix.os }}.AppImage
+          test -f "/home/runner/FLINT-{{ matrix.os }}.AppImage"
           echo $?
           echo "AppImages built succesfully"
