--- a/.github/workflows/test-appimage.yml
+++ b/.github/workflows/test-appimage.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - name: Test AppImages
         run: |
-          wget "https://github.com/Crystalsage/github-releases-tests/releases/download/v9.0/FLINT-${{ matrix.os }}.AppImage"
+          pwd
+          wget -q "https://github.com/Crystalsage/github-releases-tests/releases/download/v9.0/FLINT-${{ matrix.os }}.AppImage"
           test -f "/home/runner/FLINT-{{ matrix.os }}.AppImage"
           echo $?
           echo "AppImages built succesfully"
