--- a/.github/workflows/test-appimage.yml
+++ b/.github/workflows/test-appimage.yml
@@ -16,6 +16,20 @@ jobs:
     steps:
       - name: Test AppImages
         run: |
+          mkdir -p /home/runner/tmp/FLINT/Source/build/
+          cd /home/runner/tmp/FLINT/Source/build/
           wget -q "https://github.com/Crystalsage/github-releases-tests/releases/download/v9.0/FLINT-${{ matrix.os }}.AppImage"
-          test -f $(pwd)/FLINT-${{ matrix.os }}.AppImage; echo $?
-          echo "AppImages built succesfully"
+          mv /home/runner/tmp/FLINT/Source/build/FLINT-*.AppImage /home/runner/
+
+          ls /home/runner/
+          ls .
+          pwd
+
+          test -f /home/runner/FLINT-${{ matrix.os }}.AppImage; echo $?
+          echo "All AppImages have been built successfully."
+
+          /home/runner/FLINT-{{ matrix.os }}.AppImage --appimage-extract
+          cd squashfs-root
+          wget "https://raw.githubusercontent.com/Crystalsage/github-releases-tests/main/test-appimages.sh"
+          chmod +x test-appimages.sh
+          ./test-appimages.sh
