--- a/.github/workflows/test-appimage.yml
+++ b/.github/workflows/test-appimage.yml
@@ -28,7 +28,7 @@ jobs:
           test -f /home/runner/FLINT-${{ matrix.os }}.AppImage; echo $?
           echo "All AppImages have been built successfully."
 
-          /home/runner/FLINT-{{ matrix.os }}.AppImage --appimage-extract
+          /home/runner/FLINT-${{ matrix.os }}.AppImage --appimage-extract
           cd squashfs-root
           wget "https://raw.githubusercontent.com/Crystalsage/github-releases-tests/main/test-appimages.sh"
           chmod +x test-appimages.sh
