update test workflow

--- a/.github/workflows/test-appimage.yml
+++ b/.github/workflows/test-appimage.yml
@@ -20,6 +20,7 @@ jobs:
           cd /home/runner/tmp/FLINT/Source/build/
           wget -q "https://github.com/Crystalsage/github-releases-tests/releases/download/v9.0/FLINT-${{ matrix.os }}.AppImage"
           mv /home/runner/tmp/FLINT/Source/build/FLINT-*.AppImage /home/runner/
+          chmod +x /home/runner/FLINT-${{ matrix.os }}.AppImage
 
           ls /home/runner/
           ls .
