--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -29,10 +29,6 @@ jobs:
           ./AppImage_FLINT_Build.sh
           mv /home/runner/tmp/FLINT/Source/build/FLINT-*.AppImage /home/runner/FLINT-${{ matrix.os }}.AppImage
 
-      - name: Test the AppImage script
-        run: |
-          echo "TODO"
-
       - name: Cache artifacts
         uses: actions/cache@v3
         env:
@@ -62,9 +58,9 @@ jobs:
 
           /home/runner/FLINT-${{ matrix.os }}.AppImage --appimage-extract
           cd squashfs-root
-          wget "https://raw.githubusercontent.com/Crystalsage/github-releases-tests/main/test-appimages.sh"
-          chmod +x test-appimages.sh
-          ./test-appimages.sh
+          wget "https://raw.githubusercontent.com/Crystalsage/github-releases-tests/main/test-appimage-artifacts.sh"
+          chmod +x test-appimage-artifacts.sh
+          ./test-appimage-artifacts.sh
 
 
   release:
