--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -10,6 +10,11 @@ on:
         description: "Is this a dev release?"
         required: true
         type: boolean
+    tags:
+      description: 'Dev release tag'
+      required: true
+      type: boolean
+
 
 jobs:
   build:
