--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,15 +1,11 @@
-# This is a basic workflow to help you get started with Actions
 
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+    tags:
+      - 'v*'
+      
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -31,5 +27,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Check for tag
+        if: contains(${{ github.ref_type }}, 'tag')
         run: |
           echo ${{ github.ref_name }} || echo "Production"
