--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,35 +1,34 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - '*'
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      devRelease:
+        description: "Is this a dev release?"
+        required: true
+        type: boolean
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  release:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Check for tag
+      - name: Create dev release
+        if: ${{ inputs.devRelease }}
         run: |
-          echo ${{ github.ref_name }} || echo "Production"
+          echo "Dev release"
+        
+      # This is because releases _need_ a tag. 
+      # Please consider changing the tag later by pushing one.
+      - name: Create production release for manual run
+        if: ${{ !inputs.devRelease }} && contains(github.ref_type, 'branch')
+        run: |
+          echo "Production release with no tag"
+
+      - name: Create production release with a tag
+        if: ${{ !inputs.devRelease }} && contains(github.ref_type, 'tag')
+        run: |
+          echo "Production release with tag"
